fix: grid alignment

--- a/src/components/Grid/Cell/Cell.css
+++ b/src/components/Grid/Cell/Cell.css
@@ -4,13 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100% - (var(--cell-margin, 8px) * 2));
-  margin: var(--cell-margin, 8px);
+  height: calc(100% - (var(--space-unit, 8px) * 2));
+  margin: var(--space-unit, 8px);
   border-radius: 2px;
   /* solves rendering issues with iOS */
   min-width: 0;
-}
-
-.Cell:empty {
-  /* background: rgb(245, 245, 245); */
 }
